--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,7 +64,7 @@ setw -g aggressive-resize on
 # bind-key C-a send-prefix
 
 # Split panes using 'h' 'v', rather than " and % [Use prefix h]
-bind b split-window -b
+bind h split-window -h
 bind v split-window -v
 unbind 'r'
 bind r source-file ~/.config/tmux/tmux.conf
