--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,6 +1,6 @@
 sort=-time
 layer=overlay
-background-color=#303030dd
+background-color=#505050AA
 width=300
 height=110
 border-size=2
@@ -13,10 +13,10 @@ ignore-timeout=1
 # font=monospace 12
 
 [urgency=low]
-border-color=#88c0d0
+border-color=#33ccffee
 
 [urgency=normal]
-border-color=#d08770
+border-color=#990099ee
 
 [urgency=high]
 border-color=#bf616a
